# 4sem_PKS_KR3

./: .gitignore  CMakeLists.txt  README.md
results/: simulation_history.txt
src/: main.cpp
src/core/: Elevator.cpp  Elevator.h  ElevatorSystem.cpp  ElevatorSystem.h
src/model/: Call.cpp  Call.h  Direction.h  ElevatorStateType.h  Passenger.cpp  Passenger.h
src/result/: SimulationResult.cpp  SimulationResult.h
src/scheduler/: CallDispatcher.cpp  CallDispatcher.h  FIFOStrategy.cpp  FIFOStrategy.h  IStrategy.h  NearestCarStrategy.cpp  NearestCarStrategy.h  RoundRobinStrategy.cpp  RoundRobinStrategy.h  SCANStrategy.cpp  SCANStrategy.h
src/services/: Config.cpp  Config.h  ConsoleRenderer.cpp  ConsoleRenderer.h  EventLogger.cpp  EventLogger.h  StatisticsCollector.cpp  StatisticsCollector.h
src/simulation/: Simulation.cpp  Simulation.h
src/state/: IElevatorState.h  IdleState.cpp  IdleState.h  MovingState.cpp  MovingState.h  StoppedState.cpp  StoppedState.h
tests/: CMakeLists.txt
tests/core/: ElevatorSystemTests.cpp  ElevatorTests.cpp
tests/integration/: Scenario1_SingleCall.cpp  Scenario2_Overflow.cpp  Scenario3_NearestCar.cpp  Scenario4_SCAN_Opposite.cpp  Scenario5_ConfigBoundaries.cpp
tests/model/: CallTests.cpp  PassengerTests.cpp
tests/scheduler/: CallDispatcherTests.cpp  FIFOStrategyTests.cpp  NearestCarStrategyTests.cpp  RoundRobinStrategyTests.cpp  SCANStrategyTests.cpp
tests/services/: ConfigTests.cpp  EventLoggerTests.cpp  StatisticsCollectorTests.cpp
